...

    return MaterialApp(
      home: Scaffold(
        appBar: AppBar(
          title: Semantics(
            identifier: 'home-title',
            child: const Text('LinkMe SDK example'),
          ),
        ),
        body: Padding(
          padding: const EdgeInsets.all(16),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
...
              ),
              const SizedBox(height: 16),
              Semantics(
                identifier: 'button-claim-deferred',
                child: ElevatedButton(
                  onPressed: _claimDeferred,
                  child: const Text('Claim Deferred'),
                ),
              ),
            ],
          ),
        ),
      ),
...
